# mpvRemote

./: Cargo.toml  Makefile  README.md  main.lua  remote.lua  server.lua  tailwind.config.js
script-opts/: mpv-remote.conf  mpv-remote.json
src/: config.rs  lib.rs  logger.rs  mpv.rs  plugin.rs  server.rs  websocket.rs
www/: index.html
www/static/: input.css  main.js  output.css
