[package]
name = "mpv-remote"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpv_remote"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
dirs = "6.0.0"
mpv-client = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
tokio = { version = "1.44.0", features = ["full"] }
